--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,8 @@
     "bower-asset/jquery-slimscroll": "^1.3",
     "bower-asset/flot": "^0.8",
     "symfony/process": "^3.0",
-    "kartik-v/yii2-money": "*"
+    "kartik-v/yii2-money": "*",
+    "pagseguro/php": "@stable"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "^2.0.0",
